--- a/frontend/src/css/MessageForm.css
+++ b/frontend/src/css/MessageForm.css
@@ -1,3 +1,10 @@
 div .divisorDiv {
     padding-top: 2%;
 }
+
+.message-form {
+    margin: 0 auto;
+    border: 1px black;
+    border-radius: 5px;
+    width: 80%;
+}
